--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 0.7.2 (unreleased)
 ------------------
 
-None yet.
+- Fixed deletion of report activities (https://launchpad.net/bugs/627490)
 
 
 0.7.1 (2010-06-25)
