--- a/src/schooltool/gradebook/locales/en_AU.po
+++ b/src/schooltool/gradebook/locales/en_AU.po
@@ -1,16 +1,16 @@
-# English (Canada) translation for schooltool
-# Copyright (c) 2008 Rosetta Contributors and Canonical Ltd 2008
-# This file is distributed under the same license as the schooltool package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2008.
+# English (Australia) translation for schooltool.gradebook
+# Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
+# This file is distributed under the same license as the schooltool.gradebook package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: schooltool\n"
+"Project-Id-Version: schooltool.gradebook\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-05-20 21:46+0300\n"
-"PO-Revision-Date: 2010-07-05 10:22+0000\n"
+"PO-Revision-Date: 2010-07-05 10:20+0000\n"
 "Last-Translator: Ken Sharp <Unknown>\n"
-"Language-Team: English (Canada) <en_CA@li.org>\n"
+"Language-Team: English (Australia) <en_AU@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -771,12 +771,12 @@ msgid ""
 "select the report activity \"Fall 2011 - Semester Grades - First Quarter\" "
 "and choose \"3\" as the minimum passing grade. And click \"Download.\""
 msgstr ""
-"For example, say the term is \"Fall 2011,\" and you have deployed a report "
-"sheet entitled \"Term Grades,\" which includes an activity \"First Quarter,"
-"\" using a grading scale where a \"3\" or higher is passing. To create a "
-"report of students failing the first quarter grade, you would select the "
-"report activity \"Fall 2011 - Term Grades - First Quarter\" and choose \"3\" "
-"as the minimum passing grade. And click \"Download.\""
+"For example, say the term is \"Autumn 2011,\" and you have deployed a report "
+"sheet entitled \"Term Grades,\" which includes an activity \"First "
+"Quarter,\" using a grading scale where a \"3\" or higher is passing. To "
+"create a report of students failing the first quarter grade, you would "
+"select the report activity \"Autumn 2011 - Term Grades - First Quarter\" and "
+"choose \"3\" as the minimum passing grade. And click \"Download.\""
 
 #: /src/schooltool/gradebook/browser/request_failing_report.pt:38
 msgid "Request Report"
@@ -1234,7 +1234,7 @@ msgid ""
 "This form allows you to create a customized \"score system\" or grading "
 "scale."
 msgstr ""
-"This form allows you to create a customized \"score system\" or grading "
+"This form allows you to create a customised \"score system\" or grading "
 "scale."
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:23
