--- a/src/schooltool/gradebook/locales/fr.po
+++ b/src/schooltool/gradebook/locales/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-05-20 21:46+0300\n"
-"PO-Revision-Date: 2010-04-28 18:17+0000\n"
-"Last-Translator: Guillaume LORET <guillaume.loret@gmail.com>\n"
+"PO-Revision-Date: 2010-07-15 14:07+0000\n"
+"Last-Translator: Steve Grosbois <steve.grosbois@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-04-29 03:57+0000\n"
+"X-Launchpad-Export-Date: 2010-07-16 03:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Rosetta-Version: 0.1\n"
 
@@ -26,7 +26,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/worksheet_overview.pt:8
 #: /src/schooltool/gradebook/interfaces.py:205
 msgid "Activities"
-msgstr ""
+msgstr "Activités"
 
 #: /src/schooltool/gradebook/browser/activities_overview.pt:4
 #: /src/schooltool/gradebook/browser/activities_overview.pt:8
@@ -39,20 +39,20 @@ msgstr "Feuilles de travail"
 
 #: /src/schooltool/gradebook/browser/activities_overview.pt:47
 msgid "Hide"
-msgstr ""
+msgstr "Masquer"
 
 #: /src/schooltool/gradebook/browser/activity.py:69
 msgid "External Activity"
-msgstr ""
+msgstr "Activité Externe"
 
 #: /src/schooltool/gradebook/browser/activity.py:70
 msgid "The external activity"
-msgstr ""
+msgstr "L'activité externe"
 
 #: /src/schooltool/gradebook/browser/activity.py:170
 #: /src/schooltool/gradebook/browser/report_card.py:217
 msgid "Add new activity"
-msgstr ""
+msgstr "Ajouter une nouvelle activité"
 
 #: /src/schooltool/gradebook/browser/activity.py:183
 #: /src/schooltool/gradebook/browser/activity.py:238
@@ -79,7 +79,7 @@ msgstr "Annuler"
 
 #: /src/schooltool/gradebook/browser/activity.py:225
 msgid "Add an External Activity"
-msgstr ""
+msgstr "Ajouter une Activité Externe"
 
 #. Default: ""
 #: /src/schooltool/gradebook/browser/activity.py:296
@@ -89,7 +89,7 @@ msgstr "Changez l'information pour ${fullname}"
 
 #: /src/schooltool/gradebook/browser/activity.py:314
 msgid "Edit External Activity"
-msgstr ""
+msgstr "Modifier une Activité Externe"
 
 #: /src/schooltool/gradebook/browser/activity.py:317
 #: /src/schooltool/gradebook/browser/report_card.py:306
@@ -100,7 +100,7 @@ msgstr "Appliquer"
 #. Default: ""
 #: /src/schooltool/gradebook/browser/activity.py:355
 msgid "$value is not a valid weight."
-msgstr ""
+msgstr "$value n'est pas une pondération valide"
 
 #: /src/schooltool/gradebook/browser/activity.py:364
 msgid "Category weights must add up to 100."
@@ -108,12 +108,12 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/activity.py:410
 msgid "The external activity couldn't be found"
-msgstr ""
+msgstr "L'activité externe n'a pu être trouvée"
 
 #: /src/schooltool/gradebook/browser/activity.py:554
 #: /src/schooltool/gradebook/browser/activity.py:622
 msgid "Average"
-msgstr ""
+msgstr "Moyenne"
 
 #: /src/schooltool/gradebook/browser/activity.py:592
 msgid "Add Linked Column"
@@ -139,12 +139,12 @@ msgstr "étiquette"
 #: /src/schooltool/gradebook/browser/add_edit_linked_column.pt:21
 #: /src/schooltool/gradebook/interfaces.py:135
 msgid "Category"
-msgstr ""
+msgstr "Catégorie"
 
 #: /src/schooltool/gradebook/browser/categories.pt:4
 #: /src/schooltool/gradebook/browser/categories.pt:15
 msgid "Manage Activity Categories"
-msgstr ""
+msgstr "Gérer les catégories d'activités"
 
 #: /src/schooltool/gradebook/browser/categories.pt:19
 msgid ""
@@ -180,15 +180,15 @@ msgstr "Modifier"
 
 #: /src/schooltool/gradebook/browser/category.py:43
 msgid "Categories"
-msgstr ""
+msgstr "Catégories"
 
 #: /src/schooltool/gradebook/browser/category.py:49
 msgid "New Category"
-msgstr ""
+msgstr "Nouvelle catégorie"
 
 #: /src/schooltool/gradebook/browser/category.py:52
 msgid "Default Category"
-msgstr ""
+msgstr "Catégorie par défaut"
 
 #: /src/schooltool/gradebook/browser/category.py:75
 msgid "Categories successfully deleted."
@@ -196,11 +196,11 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/category.py:81
 msgid "Category successfully added."
-msgstr ""
+msgstr "Catégories ajoutées avec succès"
 
 #: /src/schooltool/gradebook/browser/category.py:87
 msgid "Default category successfully changed."
-msgstr ""
+msgstr "Catégorie par défaut changée avec succès"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:56
 #: /src/schooltool/gradebook/browser/configure.zcml:90
@@ -220,7 +220,11 @@ msgstr "Ajouter une Feuille de Travail"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:139
 msgid "Add a Report Sheet"
-msgstr ""
+msgstr "Ajouter une Feuille de Rapport"
+
+#: /src/schooltool/gradebook/browser/configure.zcml:151
+msgid "Edit Worksheet"
+msgstr "Modifier Feuille de Travail"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:151
 #: /src/schooltool/gradebook/browser/configure.zcml:163
@@ -229,13 +233,9 @@ msgstr ""
 msgid "Edit"
 msgstr "Editer"
 
-#: /src/schooltool/gradebook/browser/configure.zcml:151
-msgid "Edit Worksheet"
-msgstr "Modifier Feuille de Travail"
-
 #: /src/schooltool/gradebook/browser/configure.zcml:163
 msgid "Edit Report Sheet"
-msgstr ""
+msgstr "Modifier une Feuille de Rapport"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:227
 msgid "New Report Activity"
@@ -254,7 +254,7 @@ msgstr "Carnet de notes"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:288
 msgid "New Report Sheet"
-msgstr ""
+msgstr "Nouvelle Feuille de Rapport"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:295
 msgid "New Worksheet"
@@ -290,7 +290,7 @@ msgstr "Nouvelle activité externe"
 #: /src/schooltool/gradebook/browser/configure.zcml:339
 #: /src/schooltool/gradebook/browser/configure.zcml:383
 msgid "New Linked Column"
-msgstr ""
+msgstr "Nouvelle Colonne Liée"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:390
 msgid "Manage Activities"
@@ -304,11 +304,11 @@ msgstr "Catégories"
 #: /src/schooltool/gradebook/browser/configure.zcml:404
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:16
 msgid "Preferences"
-msgstr ""
+msgstr "Préférences"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:418
 msgid "Download PDF"
-msgstr ""
+msgstr "Télécharger le PDF"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:427
 msgid "Update Grades"
@@ -325,7 +325,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/configure.zcml:669
 #: /src/schooltool/gradebook/browser/configure.zcml:712
 msgid "Reports"
-msgstr ""
+msgstr "Rapports"
 
 #: /src/schooltool/gradebook/browser/configure.zcml:575
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:13
@@ -339,25 +339,25 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/deploy_report_worksheet.pt:16
 msgid "Template"
-msgstr ""
+msgstr "Modèle"
 
 #: /src/schooltool/gradebook/browser/deploy_report_worksheet.pt:25
 msgid "Deploy"
-msgstr ""
+msgstr "Déployer"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:73
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:74
 msgid "Summary"
-msgstr ""
+msgstr "Sommaire"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:75
 msgid "Ave."
-msgstr ""
+msgstr "Moy."
 
 #: /src/schooltool/gradebook/browser/gradebook.py:75
 #: /src/schooltool/gradebook/browser/pdf_views.py:656
 msgid "Total"
-msgstr ""
+msgstr "Total"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:210
 msgid ""
@@ -371,7 +371,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook.py:582
 msgid "N/A"
-msgstr ""
+msgstr "N/A"
 
 #. Default: ""
 #: /src/schooltool/gradebook/browser/gradebook.py:685
@@ -411,7 +411,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:20
 msgid "Hide?"
-msgstr ""
+msgstr "Masquer ?"
 
 #: /src/schooltool/gradebook/browser/gradebook_column_preferences.pt:22
 #: /src/schooltool/gradebook/browser/report_card.py:136
@@ -463,7 +463,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:254
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:84
 msgid "Save"
-msgstr ""
+msgstr "Enregistrer"
 
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:16
 msgid ""
@@ -486,7 +486,7 @@ msgstr "Terme"
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:49
 #: /src/schooltool/gradebook/browser/mygrades.pt:33
 msgid "Section:"
-msgstr ""
+msgstr "Section :"
 
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:53
 #: /src/schooltool/gradebook/browser/mygrades.pt:37
@@ -502,7 +502,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:130
 #: /src/schooltool/gradebook/browser/gradebook_overview.pt:146
 msgid "(sort)"
-msgstr ""
+msgstr "(trier)"
 
 #: /src/schooltool/gradebook/browser/gradebook_startup.pt:13
 msgid "You do not teach or attend any classes."
@@ -527,7 +527,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:20
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:82
 msgid "Source"
-msgstr ""
+msgstr "Origine"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:21
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:83
@@ -536,11 +536,11 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:57
 msgid "New Column"
-msgstr ""
+msgstr "Nouvelle Colonne"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:61
 msgid "Choose a column to add"
-msgstr ""
+msgstr "Choisir une colonne à ajouter"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:78
 #: /src/schooltool/gradebook/interfaces.py:167
@@ -549,11 +549,11 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:123
 msgid "Choose an activity to add"
-msgstr ""
+msgstr "Choisir une activité à ajouter"
 
 #: /src/schooltool/gradebook/browser/layout_report_card.pt:140
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: /src/schooltool/gradebook/browser/mygrades.pt:75
 msgid "Nothing Graded"
@@ -561,12 +561,12 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/mygrades.pt:80
 msgid "Activity"
-msgstr ""
+msgstr "Activité"
 
 #: /src/schooltool/gradebook/browser/mygrades.pt:83
 #: /src/schooltool/gradebook/browser/pdf_views.py:462
 msgid "Grade"
-msgstr ""
+msgstr "Niveau"
 
 #: /src/schooltool/gradebook/browser/no_current_term.pt:5
 msgid "No Current Term"
@@ -594,7 +594,7 @@ msgstr "Cours"
 #: /src/schooltool/gradebook/browser/pdf_views.py:647
 #: /src/schooltool/gradebook/browser/pdf_views.py:764
 msgid "Student"
-msgstr ""
+msgstr "Étudiant"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:313
 msgid "Detailed Student Report"
@@ -602,7 +602,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:316
 msgid "Grade Detail"
-msgstr ""
+msgstr "Détail du niveau"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:322
 msgid "Attendance Detail"
@@ -610,15 +610,15 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:325
 msgid "Dates"
-msgstr ""
+msgstr "Dates"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:328
 msgid "Student Name"
-msgstr ""
+msgstr "Nom de l'étudiant"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:331
 msgid "User Id"
-msgstr ""
+msgstr "ID utilisateur"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:429
 msgid "Failures by Term Report"
@@ -630,7 +630,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:438
 msgid "Activity:"
-msgstr ""
+msgstr "Activité :"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:444
 msgid "Passing Score:"
@@ -643,11 +643,11 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/pdf_views.py:456
 #: /src/schooltool/gradebook/browser/pdf_views.py:634
 msgid "Course"
-msgstr ""
+msgstr "Cours"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:459
 msgid "Teacher(s)"
-msgstr ""
+msgstr "Professeur(s)"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:530
 msgid "Absences By Day Report"
@@ -663,15 +663,15 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:640
 msgid "Teacher"
-msgstr ""
+msgstr "Professeur"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:650
 msgid "Absences"
-msgstr ""
+msgstr "Absences"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:653
 msgid "Tardies"
-msgstr ""
+msgstr "Retards"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:752
 msgid "Gradebook Report"
@@ -680,23 +680,23 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/pdf_views.py:761
 #: /src/schooltool/gradebook/browser/worksheet_overview.pt:4
 msgid "Worksheet"
-msgstr ""
+msgstr "Feuille de travail"
 
 #: /src/schooltool/gradebook/browser/report_card.py:56
 msgid "Absent"
-msgstr ""
+msgstr "Absent"
 
 #: /src/schooltool/gradebook/browser/report_card.py:57
 msgid "Tardy"
-msgstr ""
+msgstr "En retard"
 
 #: /src/schooltool/gradebook/browser/report_card.py:58
 msgid "A"
-msgstr ""
+msgstr "A"
 
 #: /src/schooltool/gradebook/browser/report_card.py:59
 msgid "T"
-msgstr ""
+msgstr "T"
 
 #: /src/schooltool/gradebook/browser/report_card.py:120
 msgid "-- Use range below --"
@@ -708,7 +708,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/report_card.py:142
 msgid "Minimum"
-msgstr ""
+msgstr "Minimum"
 
 #: /src/schooltool/gradebook/browser/report_card.py:143
 msgid "Lowest integer score value possible"
@@ -716,7 +716,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/report_card.py:148
 msgid "Maximum"
-msgstr ""
+msgstr "Maximum"
 
 #: /src/schooltool/gradebook/browser/report_card.py:149
 msgid "Highest integer score value possible"
@@ -731,7 +731,7 @@ msgstr "Date"
 #: /src/schooltool/gradebook/browser/request_failing_report.pt:84
 #: /src/schooltool/gradebook/browser/request_student_report.pt:35
 msgid "Download"
-msgstr ""
+msgstr "Télécharger"
 
 #: /src/schooltool/gradebook/browser/request_failing_report.pt:25
 msgid ""
@@ -849,7 +849,7 @@ msgstr "Il y a ${num_errors} erreurs d'encodage."
 
 #: /src/schooltool/gradebook/browser/unhide_worksheets.pt:28
 msgid "Unhide"
-msgstr ""
+msgstr "Montrer"
 
 #: /src/schooltool/gradebook/browser/weight_categories.pt:18
 msgid ""
@@ -880,17 +880,19 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:4
 msgid "Delete Worksheet"
-msgstr ""
+msgstr "Effacer la feuille de travail"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:12
 msgid ""
 "Are you sure you want to delete this workskeet together with all its "
 "activities?"
 msgstr ""
+"Êtes-vous sur de vouloir effacer cette feuille de travail ainsi que toutes "
+"ses activités ?"
 
 #: /src/schooltool/gradebook/browser/worksheet_delete.pt:18
 msgid "Delete"
-msgstr ""
+msgstr "Supprimer"
 
 #: /src/schooltool/gradebook/browser/worksheet_overview.pt:14
 msgid ""
@@ -912,39 +914,39 @@ msgstr ""
 
 #: /src/schooltool/gradebook/gradebook_init.py:109
 msgid "Assignment"
-msgstr ""
+msgstr "Affectation"
 
 #: /src/schooltool/gradebook/gradebook_init.py:110
 msgid "Essay"
-msgstr ""
+msgstr "Essai"
 
 #: /src/schooltool/gradebook/gradebook_init.py:111
 msgid "Exam"
-msgstr ""
+msgstr "Examen"
 
 #: /src/schooltool/gradebook/gradebook_init.py:112
 msgid "Homework"
-msgstr ""
+msgstr "Travail personnel"
 
 #: /src/schooltool/gradebook/gradebook_init.py:113
 msgid "Journal"
-msgstr ""
+msgstr "Journal"
 
 #: /src/schooltool/gradebook/gradebook_init.py:114
 msgid "Lab"
-msgstr ""
+msgstr "Labo"
 
 #: /src/schooltool/gradebook/gradebook_init.py:115
 msgid "Presentation"
-msgstr ""
+msgstr "Présentation"
 
 #: /src/schooltool/gradebook/gradebook_init.py:116
 msgid "Project"
-msgstr ""
+msgstr "Projet"
 
 #: /src/schooltool/gradebook/interfaces.py:119
 msgid "Due Date"
-msgstr ""
+msgstr "Date d'échéance"
 
 #: /src/schooltool/gradebook/interfaces.py:120
 msgid "The date the activity is due to be graded."
@@ -961,11 +963,11 @@ msgstr "Description"
 
 #: /src/schooltool/gradebook/interfaces.py:131
 msgid "A detailed description of the activity."
-msgstr ""
+msgstr "Une description détaillée de l'activité."
 
 #: /src/schooltool/gradebook/interfaces.py:136
 msgid "The activity category"
-msgstr ""
+msgstr "La catégorie de l'activité"
 
 #: /src/schooltool/gradebook/interfaces.py:141
 msgid "Scoresystem"
@@ -977,11 +979,11 @@ msgstr ""
 
 #: /src/schooltool/gradebook/interfaces.py:147
 msgid "The date the activity was created."
-msgstr ""
+msgstr "La date à laquelle l'activité a été créée."
 
 #: /src/schooltool/gradebook/interfaces.py:163
 msgid "Columns"
-msgstr ""
+msgstr "Colonnes"
 
 #: /src/schooltool/gradebook/interfaces.py:164
 msgid "Columns to be printed in the report card."
@@ -1031,7 +1033,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/interfaces.py:336
 msgid "Points"
-msgstr ""
+msgstr "Points"
 
 #: /src/schooltool/gradebook/interfaces.py:337
 msgid "Points value to calculate the activity grade"
@@ -1047,11 +1049,11 @@ msgstr ""
 
 #: /src/schooltool/gradebook/interfaces.py:391
 msgid "A brief title of the external activity."
-msgstr ""
+msgstr "Un titre bref pour l'activité externe"
 
 #: /src/schooltool/gradebook/interfaces.py:396
 msgid "A detailed description of the external activity."
-msgstr ""
+msgstr "Une description détaillée de l'activité externe"
 
 #: /src/schooltool/gradebook/interfaces.py:414
 msgid "Linked Column Activity Source"
@@ -1067,21 +1069,19 @@ msgstr ""
 
 #: /src/schooltool/gradebook/security.zcml:10
 msgid "Edit Templates"
-msgstr ""
+msgstr "Édition des Modèles"
 
 #: /src/schooltool/gradebook/security.zcml:17
 msgid "Create and edit gradebook data for a section."
 msgstr ""
 
 #: /src/schooltool/gradebook/security.zcml:17
-#, fuzzy
 msgid "Edit Gradebook"
-msgstr "Carnet de notes"
+msgstr ""
 
 #: /src/schooltool/gradebook/security.zcml:24
-#, fuzzy
 msgid "View Gradebook"
-msgstr "Carnet de notes"
+msgstr ""
 
 #: /src/schooltool/gradebook/security.zcml:24
 msgid "View gradebook data for a section."
@@ -1153,7 +1153,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/scoresystem.py:44
 msgid "Percentages cannot be greater than 100."
-msgstr ""
+msgstr "Les pourcentages ne peuvent être supérieurs à 100"
 
 #: /src/schooltool/requirement/browser/scoresystem.py:45
 msgid "A score system must have at least two scores."
@@ -1169,7 +1169,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/scoresystem.py:48
 msgid "The last percentage must be zero."
-msgstr ""
+msgstr "Le dernier pourcentage doit être 0"
 
 #: /src/schooltool/requirement/browser/scoresystem.py:49
 msgid "Duplicate scores are not allowed."
@@ -1189,7 +1189,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/scoresystem.py:375
 msgid "Required input is missing."
-msgstr ""
+msgstr "L'entrée requise est manquante"
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:20
 msgid ""
@@ -1243,11 +1243,11 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:50
 msgid "Score"
-msgstr ""
+msgstr "Score"
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:51
 msgid "Abbreviation"
-msgstr ""
+msgstr "Abréviation"
 
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:52
 msgid "Point Value"
@@ -1268,8 +1268,8 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:20
 msgid "Delete?"
-msgstr ""
+msgstr "Supprimer ?"
 
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:38
 msgid "Update"
-msgstr ""
+msgstr "Mettre à jour"
