Launchpad automatic translations update.

--- a/src/schooltool/gradebook/locales/es.po
+++ b/src/schooltool/gradebook/locales/es.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-05-20 21:46+0300\n"
-"PO-Revision-Date: 2010-06-27 07:36+0000\n"
+"PO-Revision-Date: 2010-09-10 04:53+0000\n"
 "Last-Translator: Paco Molinero <paco@byasl.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-06-28 03:52+0000\n"
+"X-Launchpad-Export-Date: 2010-09-10 04:56+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /src/schooltool/gradebook/activity.py:51
@@ -781,8 +781,8 @@ msgid ""
 "select the report activity \"Fall 2011 - Semester Grades - First Quarter\" "
 "and choose \"3\" as the minimum passing grade. And click \"Download.\""
 msgstr ""
-"Por ejemplo, digamos que el período es «Otoño 2011», y usted ha instalado una "
-"hoja de informe llamada \"Notas de Semestre\", que incluye una actividad "
+"Por ejemplo, digamos que el período es «Otoño 2011», y usted ha instalado "
+"una hoja de informe llamada \"Notas de Semestre\", que incluye una actividad "
 "\"Primer Trimestre\", usando una escala de notas donde \"3\" es la nota "
 "mínima para pasar. Para crear un informe de los estudiantes que aplazan la "
 "nota del primer trimestre, seleccione la actividad de informe \"Otoño 2011 - "
