--- a/src/schooltool/gradebook/locales/en_CA.po
+++ b/src/schooltool/gradebook/locales/en_CA.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-05-20 21:46+0300\n"
-"PO-Revision-Date: 2010-07-05 10:22+0000\n"
-"Last-Translator: Ken Sharp <Unknown>\n"
+"PO-Revision-Date: 2010-09-10 04:50+0000\n"
+"Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
 "Language-Team: English (Canada) <en_CA@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-07-06 03:41+0000\n"
+"X-Launchpad-Export-Date: 2010-09-10 04:56+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /src/schooltool/gradebook/activity.py:51
@@ -772,11 +772,11 @@ msgid ""
 "and choose \"3\" as the minimum passing grade. And click \"Download.\""
 msgstr ""
 "For example, say the term is \"Fall 2011,\" and you have deployed a report "
-"sheet entitled \"Term Grades,\" which includes an activity \"First Quarter,"
-"\" using a grading scale where a \"3\" or higher is passing. To create a "
-"report of students failing the first quarter grade, you would select the "
-"report activity \"Fall 2011 - Term Grades - First Quarter\" and choose \"3\" "
-"as the minimum passing grade. And click \"Download.\""
+"sheet entitled \"Term Grades,\" which includes an activity \"First "
+"Quarter,\" using a grading scale where a \"3\" or higher is passing. To "
+"create a report of students failing the first quarter grade, you would "
+"select the report activity \"Fall 2011 - Term Grades - First Quarter\" and "
+"choose \"3\" as the minimum passing grade. And click \"Download.\""
 
 #: /src/schooltool/gradebook/browser/request_failing_report.pt:38
 msgid "Request Report"
