--- a/src/schooltool/gradebook/locales/en_GB.po
+++ b/src/schooltool/gradebook/locales/en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-05-20 21:46+0300\n"
-"PO-Revision-Date: 2010-07-05 10:22+0000\n"
-"Last-Translator: Ken Sharp <Unknown>\n"
+"PO-Revision-Date: 2010-09-10 04:58+0000\n"
+"Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-10 04:56+0000\n"
+"X-Launchpad-Export-Date: 2010-09-11 05:02+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /src/schooltool/gradebook/activity.py:51
@@ -1329,18 +1329,3 @@ msgstr "Delete?"
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:38
 msgid "Update"
 msgstr "Update"
-
-#~ msgid "Add a Report Worksheet"
-#~ msgstr "Add a Report Worksheet"
-
-#~ msgid "Edit Report Worksheet"
-#~ msgstr "Edit Report Worksheet"
-
-#~ msgid "New Report Worksheet"
-#~ msgstr "New Report Worksheet"
-
-#~ msgid "Deploy Report Worksheet"
-#~ msgstr "Deploy Report Worksheet"
-
-#~ msgid "Print Report Card"
-#~ msgstr "Print Report Card"
