--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,10 +5,18 @@ CHANGES
 0.7.2 (unreleased)
 ------------------
 
-- Fixed Gradebook doesn't remember last section visitied (https://launchpad.net/bugs/623507)
-- Created Manage tab CSV view that returns all sections' grades (requested by SLA)
+New features
+++++++++++++
+
+- CSV export of all sections' grades (requested by SLA)
 - Custom Score Systems need min/max passing scores (https://launchpad.net/bugs/616451)
+
+Bug fixes
++++++++++
+
+- Fixed Gradebook doesn't remember last section visited (https://launchpad.net/bugs/623507)
 - Fixed deletion of report activities (https://launchpad.net/bugs/627490)
+- "Enter" in gradebook should not submit form (https://launchpad.net/bugs/615957)
 - Updated translations (el, en, es, fr, it)
 
 
