--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,7 @@ CHANGES
 - Fixed Gradebook doesn't remember last section visitied (https://launchpad.net/bugs/623507)
 - Created Manage tab CSV view that returns all sections' grades (requested by SLA)
 - Custom Score Systems need min/max passing scores (https://launchpad.net/bugs/616451)
+- Grades rounding mismatch (https://launchpad.net/bugs/585796)
 
 
 0.7.1 (2010-06-25)
