Calculate average grade with more precision (https://launchpad.net/bugs/333971)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 0.8.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Calculate average grade with more precision (https://launchpad.net/bugs/333971)
 
 
 0.8.0 (2010-09-16)
