--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,10 @@ CHANGES
 0.8.1 (unreleased)
 ------------------
 
-- Use fixed precision for total and linked columns (https://launchpad.net/bugs/650838)
+- Grades rounding mismatch (https://launchpad.net/bugs/585796)
 - Calculate average grade with more precision (https://launchpad.net/bugs/333971)
+- Use fixed precision for total and linked columns (https://launchpad.net/bugs/650838)
+- Fix to let students view section's gradebook.
 
 
 0.8.0 (2010-09-16)
@@ -23,7 +25,6 @@ New features
 
 - CSV export of all sections' grades (requested by SLA)
 - Custom Score Systems need min/max passing scores (https://launchpad.net/bugs/616451)
-- Grades rounding mismatch (https://launchpad.net/bugs/585796)
 
 Bug fixes
 +++++++++
